# atauth

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml
.claude/commands/: admin-api.md  deploy.md  patterns.md  structure.md  testing.md  troubleshoot.md
.gitea/workflows/: deploy.yml  docker.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  security_report.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: DEPLOYMENT-INVENTORY.md  DO-HANDOFF.md  HOMELAB.md  RCA-2026-02-22-redirect-uri.md  RCA-2026-03-01-dual-atauth-instances.md
examples/: basic_verification.rs  with_session_store.rs
gateway/: .dockerignore  .env.example  .eslintrc.json  DEPLOYMENT.md  Dockerfile  README.md  SAFE-DEPLOY.md  docker-compose.yaml  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
gateway/.gitea/workflows/: build.yaml
gateway/admin-ui/: package-lock.json  package.json  vite.config.ts
gateway/admin-ui/src/: App.tsx  index.css
gateway/k8s/: kustomization.yaml
gateway/k8s/base/: configmap.yaml  (+7 more)
gateway/src/: index.ts
gateway/tekton/: README.md  ingress.yaml  kustomization.yaml  pipeline.yaml  pipelinerun.yaml  rbac.yaml  secrets.yaml  trigger.yaml
gateway/tests/: oidc-flow.test.ts
src/: README.md  error.rs  lib.rs  rate_limit.rs  token.rs  validation.rs
src/session/: mod.rs  postgres.rs  sqlite.rs  store.rs
ts/: .eslintrc.json  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
ts/src/: index.ts  oauth.ts  react.ts  storage.ts  token.test.ts  token.ts  types.ts  validation.test.ts  validation.ts
(+94 files in other folders)
